# QueryBot

backend/: .gitignore  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/agenticAI/Nodes/: nodes.py
backend/app/agenticAI/agents/: agents.py
backend/app/agenticAI/graph/: graph.py
backend/app/agenticAI/schema/: schema.py
backend/app/agenticAI/tools/: tools.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  fakestore.py  ingest.py  query.py
backend/app/db/: db.py  init_db.py
backend/app/db/models/: cart.py
backend/app/db/services/: cart_services.py  product_service.py
backend/app/llm/: huggingface.py
backend/app/rag/: chain.py  ingestion.py  prompts.py  retriever.py
backend/app/vectorstore/: chroma.py
backend/test/: test_chain.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  MessageBubble.jsx  PdfUpload.jsx  UrlingestForm.jsx
